--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-Django>=4.2.0
-mysqlclient>=2.2.0
+Django>=5.0.0
+PyMySQL>=1.1.0
 beautifulsoup4>=4.12.0
 requests>=2.31.0
-Pillow>=10.0.0
-python-decouple>=3.8
-django-cors-headers>=4.3.0
-django-extensions>=3.2.0
+python-dateutil>=2.8.0
